# incubator-milagro-crypto

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.md  bigtobig.cpp  bngen.cpp  bower.json  check.cpp  curves.txt  ecgen.cpp  linux.md  mac.md  readme.txt  romgen.cpp  windows.md
c/: CMakeLists.txt  amcl.h  amcl.h.in  amcl_.h  arch.h  big.c  big.h  build_ec  build_ec.bat  build_pair  build_pair.bat  build_pair_ms.bat  config16.py  config32.py  config64.py  ecdh.c  ecdh.h  ecp.c  ecp.h  ecp2.c  ecp4.c  ecp8.c  ff.c  fp.c  fp.h  fp12.c  fp16.c  fp2.c  fp2.h  fp24.c  fp4.c  fp4.h  fp48.c  fp8.c  mpin.c  mpin.h  mpin192.c  mpin256.c  newhope.c  pair.c  (+15 more)
c/tests/: CMakeLists.txt  config.h.in  test_ecdh.c  test_ecm.c  test_mpin.c  test_mpin_bad_pin.c  test_mpin_bad_token.c  test_mpin_expired_tp.c  test_mpin_good.c  test_mpin_random.c  test_mpin_sign.c  test_mpin_tp.c  test_mpinfull.c  test_mpinfullSingle.c  test_mpinfull_random.c  test_rsa.c  test_version.c  test_wcc.c  test_wcc_gcm.c  test_wcc_random.c
cpp/: amcl.h  benchtest_all.cpp  big.cpp  big.h  config16.py  config32.py  config64.py  config_field.h  ecdh.cpp  ecp.cpp  ecp.h  ecp2.cpp  ecp4.cpp  ecp8.cpp  fp.cpp  fp.h  fp12.cpp  fp16.cpp  fp16.h  fp2.cpp  fp24.cpp  fp4.cpp  fp48.cpp  fp48.h  fp8.cpp  fp8.h  mpin.cpp  mpin192.cpp  mpin256.cpp  newhope.cpp  oct.cpp  pair.cpp  pair192.cpp  pair192.h  pair256.cpp  rom_curve_BLS383.cpp  rom_curve_BLS461.cpp  rom_field_BLS461.cpp  rom_field_GOLDILOCKS.cpp  testall.cpp
crypto-c/: CMakeLists.txt  CPackConfig.cmake  Makefile  config.mk
crypto-c/benchmark/: CMakeLists.txt  benchtest_mpin_ZZZ.c.in  benchtest_pair_ZZZ.c.in
crypto-c/cmake/: AMCLParameters.cmake
crypto-c/examples/: CMakeLists.txt  testdvs_ZZZ.c.in  testmpin_ZZZ.c.in  testwcc_ZZZ.c.in  testwcc_dta_ZZZ.c.in
crypto-c/include/: config_test.h.in
crypto-c/src/: wcc.c.in
crypto-c/test/: CMakeLists.txt  test_ecp_arithmetics_ZZZ.c.in  test_fp4_arithmetics_YYY.c.in  test_mpin_ZZZ.c.in  test_mpin_bad_pin_ZZZ.c.in  test_mpin_bad_token_ZZZ.c.in  test_mpin_dvs_ZZZ.c.in  test_mpin_dvs_wrong_pk_ZZZ.c.in  test_mpin_expired_tp_ZZZ.c.in  test_mpin_good_ZZZ.c.in  test_mpin_random_ZZZ.c.in  test_mpin_sign_ZZZ.c.in  test_mpin_tp_ZZZ.c.in  test_mpin_vectors_ZZZ.c.in  test_mpinfull_ZZZ.c.in  test_mpinfull_onepass_ZZZ.c.in  test_mpinfull_random_ZZZ.c.in  test_mpinfull_tp_ZZZ.c.in  test_output_functions_ZZZ.c.in  test_pair_ZZZ.c.in  test_wcc_ZZZ.c.in  test_wcc_bad_receiver_key_ZZZ.c.in  test_wcc_bad_sender_key_ZZZ.c.in  test_wcc_invalid_points_ZZZ.c.in  test_wcc_random_ZZZ.c.in
crypto-c/testVectors/ecp/: test_vector_BLS383.txt
crypto-js/: README.md  index.js  package.json
cs/: AES.cs  BIG.cs  DBIG.cs  ECDH.cs  ECP.cs  ECP2.cs  FF.cs  FP.cs  FP12.cs  FP2.cs  FP4.cs  GCM.cs  HASH.cs  MPIN.cs  PAIR.cs  RAND.cs  ROM.cs  RSA.cs  RectangularArrays.cs  TestECDH.cs  TestECM.cs  TestMPIN.cs  TestRSA.cs  readme.txt
docs/: AMCL.dox  CMakeLists.txt  Doxyfile.in  README.txt
go/: BIG32.go  BIG64.go  BenchtestALL.go  ECDH.go  ECP.go  ECP2.go  ECP4.go  ECP8.go  FP.go  FP12.go  FP16.go  FP2.go  FP24.go  FP4.go  FP48.go  FP8.go  MPIN.go  MPIN192.go  MPIN256.go  NHS.go  PAIR.go  PAIR192.go  PAIR256.go  ROM_BLS24_32.go  ROM_BLS381_64.go  ROM_BLS383_64.go  ROM_BLS461_64.go  ROM_BLS48_64.go  ROM_BN254CX_32.go  ROM_BN254CX_64.go  ROM_BN254_64.go  ROM_BRAINPOOL_64.go  ROM_C25519_32.go  ROM_C41417_32.go  ROM_C41417_64.go  ROM_FP256BN_32.go  ROM_FP512BN_64.go  ROM_HIFIVE_64.go  ROM_NIST256_32.go  ROM_NIST384_32.go  (+12 more)
java/: AES.java  BIG.java  BIG32.java  BIG64.java  DBIG.java  DBIG32.java  DBIG64.java  ECDH.java  ECP.java  ECP2.java  ECP4.java  ECP8.java  FF.java  FF64.java  FP.java  FP12.java  FP16.java  FP2.java  FP24.java  FP32.java  FP4.java  FP48.java  FP64.java  FP8.java  GCM.java  MPIN.java  MPIN192.java  MPIN256.java  OLDECP2.java  PAIR.java  PAIR192.java  PAIR256.java  RAND.java  README.md  ROM.java  ROM_ANSSI_64.java  ROM_BLS381_32.java  ROM_BLS381_64.java  ROM_BLS461_64.java  ROM_BLS48_32.java  (+26 more)
java64/: AES.java  BIG.java  DBIG.java  ECDH.java  ECP.java  FF.java  (+15 more)
pythonCFFI/: CMakeLists.txt  README.md  TestMPIN.py  TestMPINAnon.py  TestMPINAnonInstall.py  TestMPINBNCX.py  TestMPINInstall.py  TimeMPIN.py  TimeMPINFull.py  mpin.py  wcc.py
version22/rust/: Cargo.toml  readme.txt
version22/rust/src/: big.rs  ecdh.rs  ecp.rs  ff.rs  fp.rs  fp12.rs  fp2.rs  hash256.rs  hash384.rs  hash512.rs  lib.rs  mpin.rs  pair.rs  rand.rs  rsa.rs
version22/rust/tests/: benchtest_pair.rs  test_ecdh.rs  test_mpin.rs  test_rsa.rs
version3/rust/: BenchtestALL.rs  Cargo.toml  TestALL.rs  TestBLS.rs  TestNHS.rs  arch32.rs  big.rs  config32.py  config64.py  dbig.rs  ecdh.rs  ecp.rs  ecp2.rs  ecp4.rs  ecp8.rs  ff.rs  fp.rs  fp12.rs  fp16.rs  fp2.rs  fp24.rs  fp4.rs  fp48.rs  fp8.rs  modpf192.rs  mpin.rs  mpin192.rs  mpin256.rs  pair.rs  pair192.rs  pair256.rs  readme.md  readme.txt  rom_anssi_32.rs  rom_anssi_64.rs  rom_bls24_32.rs  rom_bls383_32.rs  rom_bls461_32.rs  rom_bn254_32.rs  rom_brainpool_32.rs  (+12 more)
version3/rust/src/: aes.rs  big.rs  bls.rs  bls192.rs  bls256.rs  dbig.rs  ecdh.rs  ecp.rs  ecp2.rs  ecp4.rs  ecp8.rs  ff.rs  fp.rs  fp12.rs  fp16.rs  fp2.rs  fp24.rs  fp4.rs  fp48.rs  fp8.rs  hash384.rs  hash512.rs  lib.rs  mpin.rs  mpin192.rs  mpin256.rs  pair.rs  pair192.rs  pair256.rs  rsa.rs  types.rs
version3/rust/src/roms/: rom_anssi_32.rs  rom_anssi_64.rs  rom_bls24_32.rs  rom_bls24_64.rs  rom_bls381_32.rs  rom_bls381_64.rs  rom_bls383_32.rs  rom_bls383_64.rs  rom_bls461_32.rs  rom_bls461_64.rs  rom_bls48_32.rs  rom_bls48_64.rs  rom_bn254CX_32.rs  rom_bn254CX_64.rs  rom_bn254_32.rs  rom_bn254_64.rs  rom_brainpool_32.rs  rom_brainpool_64.rs  rom_c25519_32.rs  rom_c25519_64.rs  rom_c41417_32.rs  rom_c41417_64.rs  rom_ed25519_32.rs  rom_ed25519_64.rs  rom_fp256bn_32.rs  rom_fp256bn_64.rs  rom_fp512bn_32.rs  rom_fp512bn_64.rs  rom_goldilocks_32.rs  rom_goldilocks_64.rs  rom_hifive_32.rs  rom_hifive_64.rs  rom_nist256_32.rs  rom_nist256_64.rs  rom_nist384_32.rs  rom_nist384_64.rs  rom_nist521_32.rs  rom_nist521_64.rs  rom_nums256e_32.rs  rom_nums256e_64.rs  (+18 more)
(+948 files in other folders)
